--- a/C/CMakeLists.txt
+++ b/C/CMakeLists.txt
@@ -1,5 +1,7 @@
-project(even_spaced_curves, C)
 
-include_directories(include)
-add_executable(even_spaced_curves, src/main.c)
+cmake_minimum_required(VERSION 3.22)
+
+project(even_spaced_curves C)
+include_directories(PUBLIC ./include/)
+add_executable(even_spaced_curves src/main.c)
 
