Move include dir to root

--- a/C++/CMakeLists.txt
+++ b/C++/CMakeLists.txt
@@ -2,7 +2,7 @@
 cmake_minimum_required(VERSION 3.22)
 
 project(even_spaced_curves CXX)
-include_directories(PUBLIC ./include/)
+include_directories(PUBLIC ./../include/)
 link_libraries(m)
 add_executable(even_spaced_curves src/main.cpp)
 
